--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="calculator-grid">
+      <div class="output">
+        <div class="previous-operand"></div>
+        <div class="current-operand"></div>
+      </div>
+      <button class="span-two">AC</button>
+      <button>DEL</button>
+      <button>÷</button>
+    </div>
+  </body>
 </html>
