--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Overpass&family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
-    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="calculator-grid">
       <div class="output">
-        <div class="previous-operand"></div>
-        <div class="current-operand"></div>
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand"></div>
       </div>
-      <button data-al-clear class="span-two">AC</button>
+      <button data-all-clear class="span-two">AC</button>
       <button data-delete>DEL</button>
       <button data-operation>÷</button>
       <button data-number>1</button>
